<font color=#FF8C00>&#9830;</font> Install: showPlayer in GroupFrames
<font color=#FF8C00>&#9830;</font> Misc: Add new Fonts "Merathilis PROTOTYPE_RU" and "Merathilis Expressway" use this for the Chat/ Tooltip and Skada. Also made appropriate changes so that it's available in ruRU clients.
<font color=#FF8C00>&#9830;</font> Quest: Delete the Quest Skin.

<b><u> v1.05, 26.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Core: Change the SlashCommand to enter the Setup "/muisetup".
<font color=#FF8C00>&#9830;</font> Install: MerathilisUI Install Process should now appears after BenikUI Install is finished. (If BenikUI is loaded.)
<font color=#FF8C00>&#9830;</font> Misc: Shows a Chat notification if a Battle.net Friend switch Games or goes on-/ offline. (Credits Clinton Caldwell)
<font color=#FF8C00>&#9830;</font> Misc: Add a FactionLogo-Texture to the right Chat. -- Credits Alex (Chat Textures Pack - ElvUI)
<font color=#FF8C00>&#9830;</font> Misc: Replace ufFont & visitor1 Font with one that supports cyrillics.
<font color=#FF8C00>&#9830;</font> Skins: MasterPlan: Skin the Missions of Interest tab for naval missions. (Requires MasterPlan 0.74.1)

<b><u> v1.04, 22.10.2015</b></u>
<font color=#FF8C00>&#9830;</font> Install: Don't use detachedPortraits and Powerbar. (Conflict with a BenikUI Layout)
<font color=#FF8C00>&#9830;</font> Install: Remove AddOnSkins from the Installation Process. Now it has its own File.
<font color=#FF8C00>&#9830;</font> Install: Use Blizzard styled Close Buttons. (Credit Blazeflack)
<font color=#FF8C00>&#9830;</font> UnitFrames: Use classHover also for the Raid40 Frames.
<font color=#FF8C00>&#9830;</font> UnitFrames: Prevent a strange behavior if BenikUI's classHover (not released yet) is enable.
<font color=#FF8C00>&#9830;</font> Misc: Update BlizzBugs to the latest Version.
<font color=#FF8C00>&#9830;</font> Misc: Some fixes to the BlizzardMovers.