@@ -37,11 +37,6 @@ if not L then return; end
 	--L['UnitFrames'] = true -- translated in ElvUI
 	L['Hover ClassColor'] = "Klassenfarben Effekt"
 	L['Adds an Hovereffect for ClassColor to the Raidframes.'] = "Fügt ein MouseOver Klassenfarben Effekt zu dem Schlachtzugsfenster hinzu."
-	L['Empty Bar'] = "Leerer Balken"
-	L['Enable'] = "Aktiviert"
-	L['Add an EmptyBar to under the Raidframes. E.g. to look like TukUI Unitframes.'] = "Fügt einen Leeren Balken unter den Schlachtzugsfenster hinzu. Zum Beispiel um auszusehen wie die TukUI Einheitenfenster."
-	L['Threat'] = "Bedrohung"
-	L['Enable Threat on the EmptyBar'] = "Aktiviert die Bedrohungsanzeige auf den Leeren Balken"
 -- RareAlert
 	L["Rare spotted!"] = "RarMob in deiner Nähe!"
 	L['RareAlert'] = true
