@@ -37,11 +37,6 @@ if not L then return; end
 	--L['UnitFrames'] = true -- translated in ElvUI
 	L['Hover ClassColor'] = true
 	L['Adds an Hovereffect for ClassColor to the Raidframes.'] = true
-	L['Empty Bar'] = true
-	L['Enable'] = true
-	L['Add an EmptyBar to under the Raidframes. E.g. to look like TukUI Unitframes.'] = true
-	L['Threat'] = true
-	L['Enable Threat on the EmptyBar'] = true
 -- RareAlert
 	L["Rare spotted!"] = true
 	L['RareAlert'] = true
