@@ -1,5 +1,3 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/">	
 	<Script file="unithover.lua"/>
-	<Script file="units.lua"/>
-	<Script file="raid.lua"/>
 </Ui>
