@@ -3,6 +3,7 @@
 <font color=#FF8C00>&#9830;</font> Install: showPlayer in GroupFrames
 <font color=#FF8C00>&#9830;</font> Misc: Add new Fonts "Merathilis PROTOTYPE_RU" and "Merathilis Expressway" use this for the Chat/ Tooltip and Skada. Also made appropriate changes so that it's available in ruRU clients.
 <font color=#FF8C00>&#9830;</font> Quest: Delete the Quest Skin.
+<font color=#FF8C00>&#9830;</font> UnitFrames: Delete EmptyBars on Raidframes now Part in BenikUI.
 
 <b><u> v1.05, 26.10.2015</b></u>
 <font color=#FF8C00>&#9830;</font> Core: Change the SlashCommand to enter the Setup "/muisetup".
